--- a/1_Software/Etape_6/Makefile
+++ b/1_Software/Etape_6/Makefile
@@ -1,11 +1,11 @@
 CC=gcc
 LDFLAGS=-lm
 EXEC=main
-SRC=./src/main.c
+SRC=./src/main.c ./src/pgcd.c
 
 OBJ= $(SRC:.c=.o)
 
-CFLAGS=-O2 -Wall 
+CFLAGS=-O2 -Wall
 
 all: $(EXEC)
 
